@@ -1,7 +1,6 @@
 # -*- encoding: utf-8 -*-
 
 import os
-import fnmatch
 
 from typhon.arts import xml
 
@@ -13,12 +12,14 @@ from typhon.arts import xml
 #
 # Notes:
 #   This is not a docstring to ensure readble output in nosetests.
+data_path = os.getenv('ARTS_DATA_PATH')
 def test_load_arts_xml_data():
-    if os.environ.get('ARTS_DATA_PATH'):
-        for root, _, filenames in os.walk(os.environ.get('ARTS_DATA_PATH')):
-            for filename in filenames:
-                if filename.endswith(('.xml', '.xml.gz')):
-                    yield _load_xml, os.path.join(root, filename)
+    if data_path:
+        for d in data_path.split(os.path.pathsep):
+            for root, _, filenames in os.walk(d):
+                for filename in filenames:
+                    if filename.endswith(('.xml', '.xml.gz')):
+                        yield _load_xml, os.path.join(root, filename)
     else:
         raise Exception('ARTS_DATA_PATH is not set.')
 
